# pyirix

./: .gitignore  README.md  __init__.py  pyproject.toml  requirements.txt
debug/: __init__.py  dwarf.py  mips_disasm.py  mipsasm.py  modules.py  strings.py  syms.py
docs/: building-a-bootable-irix-root.md  debug.md  dist.md  efs.md  xfs.md
efs/: __init__.py  builder.py  create_kern_src.py  extract.py  reader.py  repair.py  wrap_with_vh.py
kernel/: __init__.py  callgraph.py  dataref.py  disasm.py  syscalls.py  xref.py
prom/: __init__.py  config.py
xfs/: __init__.py  __main__.py  alloc.py  btree.py  check.py  constants.py  directory.py  ialloc.py  image.py  inode.py  mkfs.py  ondisk.py  operations.py  repair.py  superblock.py
